feat: add GitHub ribbon web component to index page

--- a/index.html
+++ b/index.html
@@ -122,6 +122,18 @@
       data-main-ace="https://cdnjs.cloudflare.com/ajax/libs/ace/1.43.3/ace.min.js"
     ></script>
 
+    <script
+      src="https://cdn.jsdelivr.net/gh/MarketingPipeline/GitHub-Ribbon-Web-Component/dist/github-ribbon-wc.min.js"
+      defer
+    ></script>
+
+    <github-ribbon
+      link="https://github.com/stopsopa/mcp"
+      type="right"
+      color="#679d2c"
+      >Fork me on GitHub</github-ribbon
+    >
+
     <h1>MCP JSON-RPC Request Builder</h1>
 
     <div class="container">
